--- a/trino/access-control.properties
+++ b/trino/access-control.properties
@@ -1,2 +1,7 @@
 access-control.name=opa
 opa.policy.uri=https://opa.example.com/v1/data/trino/allow
+opa.policy.row-filters-uri=https://opa.example.com/v1/data/trino/row_filters
+opa.policy.column-masking-uri=https://opa.example.com/v1/data/trino/column_masking
+opa.policy.batch-column-masking-uri=https://opa.example.com/v1/data/trino/batch_column_masking
+opa.policy.batched-uri=https://opa.example.com/v1/data/trino/batched
+opa.allow-permission-management-operations=true
